--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,6 +1,7 @@
 .home-container {
-    height: 100%;
-    background: #333;
+    min-height: 100%;
+    background: #333 url(../images/bg1.jpg) repeat-y 0 bottom;
+    background-size: 100% auto;
     padding: 0;
     .home-ad-banner {
         height: 150px;
