--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -1,6 +1,6 @@
 <div class="btn-group justified">
   <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i></a>
-  <div ui-turn-on='dropdown1' href="javascript:;" class="btn btn-navbar">
+  <div ui-turn-on='dropdown1' class="btn btn-navbar">
     <i class="fa fa-bars"></i>
     <ul 
       class="dropdown-menu"
@@ -10,12 +10,12 @@
       ui-show="dropdown1" 
       ui-state="dropdown1"
       ui-turn-off="dropdown1">
-      <li><a href="/">麦啡商城</a></li>
-      <li><a>生  豆</a></li>
-      <li><a>coffeefans</a></li>
+      <li><a href="/#/list?type=0">麦啡商城</a></li>
+      <li><a href="/#/list?type=1">生  豆</a></li>
+      <li><a href="/#/list?type=2">coffeefans</a></li>
     </ul>
     咖啡生豆</div>
-  <div ui-turn-on='dropdown2' href="javascript:;" class="btn btn-navbar">
+  <div ui-turn-on='dropdown2' class="btn btn-navbar">
     <i class="fa fa-bars"></i>
     <ul 
       class="dropdown-menu"
@@ -29,7 +29,7 @@
       <li><a>活动预告</a></li>
     </ul>
     团购活动</div>
-  <div ui-turn-on='dropdown3' href="javascript:;" class="btn btn-navbar">
+  <div ui-turn-on='dropdown3' class="btn btn-navbar">
     <i class="fa fa-bars"></i>
     <ul
       class="dropdown-menu dropdown-menu-last"
