--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,12 +2,12 @@
   <div class="home-ad-banner">
       <ul rn-carousel rn-carousel-index="vm.carouselIndex">
         <li ng-repeat="item in vm.slides track by $index">
-            <img ng-src="{{item}}" alt="{{item}}">
+            <img ng-src="{{item.img}}" alt="{{item.img}}">
         </li>
       </ul>
       <div class="ad-indicator" rn-carousel-indicators ng-if="vm.slides.length > 1" slides="vm.slides" rn-carousel-index="vm.carouselIndex"></div>
   </div>
-  <div class="home-links">
+  <!-- <div class="home-links">
       <div class="links-cont">
           <a href="/#/list?type=0">精品级</a>
           <a href="/#/list?type=1">商业级</a>
@@ -16,5 +16,5 @@
       <div class="links-cont">
           <a class="one-link" href="#">团购活动</a>
       </div>
-  </div>
+  </div> -->
 </section>
