--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -10,9 +10,9 @@
       ui-show="dropdown1" 
       ui-state="dropdown1"
       ui-turn-off="dropdown1">
-      <li><a href="/#/list?type=0">麦啡商城</a></li>
-      <li><a href="/#/list?type=1">生  豆</a></li>
-      <li><a href="/#/list?type=2">coffeefans</a></li>
+      <li><a href="#/list?type=0">麦啡商城</a></li>
+      <li><a href="#/list?type=1">生  豆</a></li>
+      <li><a href="#/list?type=2">coffeefans</a></li>
     </ul>
     咖啡生豆</div>
   <div ui-turn-on='dropdown2' class="btn btn-navbar">
