--- a/src/less/list.less
+++ b/src/less/list.less
@@ -55,10 +55,28 @@
                 line-height: 18px;
                 margin-bottom: 0;
                 border-bottom: 1px dashed #999;
+                height: 36px;
+                overflow: hidden;
             }
             p {
+                position: relative;
+                line-height: 24px;
+                margin: 0;
+                font-size: 12px;
                 em {
                     color: #ff5000;
+                    font-style: normal;
+                    font-size: 14px;
+                    padding-right: 5px;
+                }
+                .item-buy {
+                    position: absolute;
+                    right: 0;
+                    top: 5px;
+                    width: 26px;
+                    height: 22px;
+                    background: url(../images/item_buy.png) no-repeat;
+                    background-size: 100% 100%;
                 }
             }
         }
