--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -10,9 +10,9 @@
       ui-show="listDropdown" 
       ui-state="listDropdown"
       ui-turn-off="listDropdown">
-      <li><a href="/#/list?type=0">精品级</a></li>
-      <li><a href="/#/list?type=1">商业级</a></li>
-      <li><a href="/#/list?type=2">高级商业</a></li>
+      <li><a href="#/list?type=0">精品级</a></li>
+      <li><a href="#/list?type=1">商业级</a></li>
+      <li><a href="#/list?type=2">高级商业</a></li>
     </ul>
     </div>
 
@@ -29,7 +29,7 @@
         <div ng-repeat="item in vm.items track by $index" class="list-item">
           <img ng-src="{{item.img}}" alt="" />
           <h4>{{item.desc}}</h4>
-          <p><em>{{item.price}}</em></p>
+          <p><em>￥{{item.price}}</em>88人付款 <a class="item-buy"></a></p>
         </div>
       </div>
     </div>
