--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,3 +1,10 @@
 @import "main.less";
 @import "home.less";
 @import "list.less";
+@import "area.less";
+@import "detail.less";
+@import "login.less";
+@import "add_shopping_cart.less";
+@import "edit_shopping_cart.less";
+@import "member_ship.less";
+@import "group_purchase.less";
