--- a/src/less/list.less
+++ b/src/less/list.less
@@ -17,9 +17,8 @@
             right: 0;
             top: 5px;
             height: 34px;
-            padding-top: 3px;
-            width: auto;
-            padding-right: 10px;
+            width: 40px;
+            padding: 3px 10px 0;
         }
     }
 
@@ -43,6 +42,7 @@
             position: relative;
             padding: 150px 8px 0;
             height: 220px;
+            color: #252525;
             img {
                 position: absolute;
                 left: 50%;
@@ -63,6 +63,7 @@
                 line-height: 24px;
                 margin: 0;
                 font-size: 12px;
+                color: #9b9b9b;
                 em {
                     color: #ff5000;
                     font-style: normal;
