--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -1,7 +1,7 @@
 <section class="list-container">
   <div class="list-nav">
-    <div ui-turn-on='listDropdown' href="javascript:;" class="btn btn-navbar">
-    精品级咖啡豆<i class="fa fa-chevron-circle-down"></i>
+    <div href="javascript:;" class="btn btn-navbar">
+    <span ui-turn-on='listDropdown'>精品级咖啡豆<i class="fa fa-chevron-circle-down"></i></span>
     <ul 
       class="dropdown-menu"
       ui-outer-click="Ui.turnOff('listDropdown')"
@@ -16,7 +16,7 @@
     </ul>
     </div>
 
-    <div class="list-place"><i class="fa fa-map-marker fa-2x"></i></div>
+    <div class="list-place" ng-click="go('/area')"><i class="fa fa-map-marker fa-2x"></i></div>
   </div>
 
   <div class="scrollable">
@@ -26,11 +26,11 @@
       </div>
 
       <div class="list-cont">
-        <div ng-repeat="item in vm.items track by $index" class="list-item">
+        <a href="#/detail?item={{item.id}}" ng-repeat="item in vm.items track by $index" class="list-item">
           <img ng-src="{{item.img}}" alt="" />
           <h4>{{item.desc}}</h4>
-          <p><em>￥{{item.price}}</em>88人付款 <a class="item-buy"></a></p>
-        </div>
+          <p><em>￥{{item.price}}</em>{{item.payedNum}}人付款 <span class="item-buy"></span></p>
+        </a>
       </div>
     </div>
   </div>
