--- a/src/less/home.less
+++ b/src/less/home.less
@@ -6,6 +6,7 @@
     .home-ad-banner {
         height: 150px;
         ul {
+            background: #fff;
             height: 150px;
             margin: 0;
             li {
