--- a/src/less/member_ship.less
+++ b/src/less/member_ship.less
@@ -3,6 +3,7 @@
     .detail-title {
         position: relative;
         min-height: 100px;
+        padding-left: 0;
         .title-desc {
             position: absolute;
             bottom: 0;
