--- a/src/templates/area.html
+++ b/src/templates/area.html
@@ -8,6 +8,6 @@
 </div>
 <div class="scrollable">
     <div class="scrollable-content area-content" scroll>
-        <div class="area-item" ng-repeat="a in vm.areas track by $index">{{a.name}}</div>
+        <div class="area-item" ng-repeat="a in vm.areas track by $index">{{a}}</div>
     </div>
 </div>
