--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -51,7 +51,7 @@
       <li><a href="#/member_ship">个人主页</a></li>
       <li><a>购物指南</a></li>
       <li><a>客服电话</a></li>
-      <li><a>你的咖啡</a></li>
+      <li><a href="#/your_coffee">你的咖啡</a></li>
     </ul>
   </div>
 </div>
