--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -46,11 +46,11 @@
         </ul>
 
         <div class="tab-cont" ui-if="activeTab == 1">
-            <img src="../images/p2.jpg" alt="">
+            <img src="images/p2.jpg" alt="">
         </div>
 
         <div class="tab-cont" ui-if="activeTab == 2">
-            <img src="../images/p2.jpg" alt="">
+            <img src="images/p2.jpg" alt="">
         </div>
 
     </div>
