--- a/src/templates/group_purchase.html
+++ b/src/templates/group_purchase.html
@@ -12,11 +12,11 @@
               <span>距离本场结束 00:21:14</span>
             </div>
             <div class="purchase-item">
-                <img ng-src="../images/p1.jpg" alt="" />
+                <img ng-src="images/p1.jpg" alt="" />
                 <div class="item-desc">
                     <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
                     <div class="item-price"><span>￥39.9</span><del>￥118</del></div>
-                    <span class="item-select">马上抡</span>
+                    <span class="item-select">马上抢</span>
                 </div>
                 <div class="item-last">
                     <span class="item-percent">已抢购35%</span>
@@ -32,7 +32,7 @@
               <span>距离本场开始 00:21:14</span>
             </div>
             <div class="purchase-item">
-                <img ng-src="../images/p1.jpg" alt="" />
+                <img ng-src="images/p1.jpg" alt="" />
                 <div class="item-desc">
                     <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
                     <div class="item-price"><span>￥39.9</span><del>￥118</del></div>
@@ -47,7 +47,7 @@
 
         <div class="tab-cont" ui-if="activeTab == 3">
             <div class="purchase-item">
-                <img ng-src="../images/p1.jpg" alt="" />
+                <img ng-src="images/p1.jpg" alt="" />
                 <div class="item-desc">
                     <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
                     <div class="item-price"><span>￥39.9</span><del>￥118</del></div>
@@ -62,7 +62,7 @@
 
         <div class="tab-cont" ui-if="activeTab == 4">
             <div class="purchase-item">
-                <img ng-src="../images/p1.jpg" alt="" />
+                <img ng-src="images/p1.jpg" alt="" />
                 <div class="item-desc">
                     <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
                     <div class="item-price"><span>￥39.9</span><del>￥118</del></div>
