--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -1,7 +1,7 @@
 <div class="scrollable">
     <div class="scrollable-content member-ship-content" scroll>
         <div class="detail-title">
-            <img src="../images/ad1.jpg">
+            <img src="images/ad1.jpg">
             <div class="title-desc">
                 亲爱的小伙伴，欢迎光临 麦啡商城
             </div>
