--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,4 +1,5 @@
 @import "main.less";
+@import "main.less";
 @import "home.less";
 @import "list.less";
 @import "area.less";
@@ -8,3 +9,4 @@
 @import "edit_shopping_cart.less";
 @import "member_ship.less";
 @import "group_purchase.less";
+@import "your_coffee.less";
