--- a/src/less/member_ship.less
+++ b/src/less/member_ship.less
@@ -4,6 +4,7 @@
         position: relative;
         min-height: 100px;
         padding-left: 0;
+        overflow: hidden;
         .title-desc {
             position: absolute;
             bottom: 0;
@@ -33,6 +34,9 @@
         background: #fff;
         margin-bottom: 12px;
         padding-left: 10px;
+        .detail-item {
+            padding-left: 40px;
+        }
     }
     .detail-item {
         padding: 10px 10px 10px 50px;
@@ -43,15 +47,15 @@
             margin-bottom: 12px;
         }
         &.detail-item-record {
-            background: #fff url(../images/record.png) no-repeat 10px 4px;
+            background: #fff url(../images/record.png) no-repeat 3px 4px;
             background-size: 25px 33px;
         }
         &.detail-item-points {
-            background: #fff url(../images/points.png) no-repeat 10px 4px;
+            background: #fff url(../images/points.png) no-repeat 3px 4px;
             background-size: 24px 33px;
         }
         &.detail-item-collect {
-            background: #fff url(../images/my_collect.png) no-repeat 7px 4px;
+            background: #fff url(../images/my_collect.png) no-repeat 0 4px;
             background-size: 29px 33px;
             border-bottom: 0 none;
         }
