--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -12,7 +12,7 @@
           <label>账户</label><input type="text" ng-model="vm.Account.logTel" placeholder="手机/会员/邮箱"/>
         </p>
         <p>
-          <label>登录密码</label><input type="tel" ng-model="vm.Account.legPwd" placeholder="请输入密码"/>
+          <label>登录密码</label><input type="password" ng-model="vm.Account.logPwd" placeholder="请输入密码"/>
         </p>
       </div>
 
