--- a/src/less/login.less
+++ b/src/less/login.less
@@ -61,6 +61,9 @@
         &.reg-region {
             background: url(../images/arr-right.png) no-repeat right 5px;
         }
+        &.reg-p {
+            border-bottom: 1px solid #d7d7d7;
+        }
     }
 
     .login-tel {
