--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -14,8 +14,8 @@
       ui-state="dropdown1"
       ui-turn-off="dropdown1">
       <li><a href="#/list?type=0">麦啡商城</a></li>
-      <li><a href="#/list?type=1">生  豆</a></li>
-      <li><a href="#/list?type=2">coffeefans</a></li>
+      <li><a href="#/list2?type=1">生  豆</a></li>
+      <li><a href="#/list3?type=2">coffeefans</a></li>
     </ul>
   </div>
   <div class="btn btn-navbar">
