--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -6,31 +6,31 @@
     <a href="#/my_record">我的纪录</a>
 </div>
 <div class="scrollable">
-    <div class="scrollable-content detail-content" scroll>
+    <div ng-init="vm.getDetail()" class="scrollable-content detail-content" scroll>
         <ul class="detail-imgs" rn-carousel rn-carousel-index="vm.carouselIndex">
             <li ng-repeat="item in vm.slides track by $index">
-                <img ng-src="{{item.img}}" alt="{{item.img}}">
+                <img ng-src="{{item.medium}}" alt="{{item.medium}}">
             </li>
         </ul>
         <div class="ad-indicator" rn-carousel-indicators ng-if="vm.slides.length > 1" slides="vm.slides" rn-carousel-index="vm.carouselIndex"></div>
         <div class="detail-desc">
-            <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
+            <h3>{{vm.productInfo.name}}</h3>
             <div class="detail-price">
-                <em>￥64.45</em>
-                <del>淘价￥65</del>
+                <em>￥{{vm.productInfo.price}}</em>
+                <del>淘价￥{{vm.productInfo.point}}</del>
                 <a class="detail-collect" href="javascript:;"></a>
                 <a class="detail-share" href="javascript:;"></a>
             </div>
         </div>
-        <div class="detail-charge">
+        <div ng-hide="true" class="detail-charge">
             <em>减满</em>满200包邮<i class="fa fa-angle-right"></i>
         </div>
         <div class="detail-items">
             <div class="detail-item"><label>净含量：</label><span>227g</span></div>
-            <div class="detail-item"><label>剩余：</label><span>48</span></div>
+            <div class="detail-item"><label>剩余：</label><span>{{vm.productInfo.stock}}</span></div>
             <div class="detail-item"><label>运费：</label><span>¥6.00~35.00</span></div>
         </div>
-        <div class="detail-shop-wrap">
+        <div ng-hide="true" class="detail-shop-wrap">
             <div class="detail-shop">
                 Urcoffee  麦啡商城
                 <a href="">进入店铺</a>
