--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -10,9 +10,9 @@
       ui-show="listDropdown" 
       ui-state="listDropdown"
       ui-turn-off="listDropdown">
-      <li><a href="#/list?type=0">精品级</a></li>
-      <li><a href="#/list?type=1">商业级</a></li>
-      <li><a href="#/list?type=2">高级商业</a></li>
+      <li><a href="javascript:vm.getList(0)">精品级</a></li>
+      <li><a href="">商业级</a></li>
+      <li><a href="">高级商业</a></li>
     </ul>
     </div>
 
