--- a/src/templates/reg.html
+++ b/src/templates/reg.html
@@ -8,7 +8,7 @@
   <div ng-init="" class="scrollable-content login-cont" scroll>
 
       <div class="login-input-wrap marginTop10">
-        <p class="reg-region">
+        <p ng-hide="true" class="reg-region">
           <label>国家地区</label>
           <select ng-model="vm.Account.regCountry">
             <option value="1">中国</option>
