--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -56,7 +56,7 @@
     </div>
 </div>
 <div class="detail-buy-buttons navbar-absolute-bottom">
-    <div class="btn btn-danger">
+    <div ng-click="vm.buyIt()" class="btn btn-danger">
         立即购买
     </div>
     <div ng-click="go('/add_shopping_cart')" class="btn btn-default">
