--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -2,7 +2,7 @@
     <div ng-click="pageBack()" class="detail-title-logo">
     </div>
     Urcoffee  麦啡商城
-    <a ng-click="vm.attend()">关注</a>
+    <a ng-hide="true" ng-click="vm.attend()">关注</a>
     <a href="#/my_record">我的纪录</a>
 </div>
 <div class="scrollable">
