--- a/src/less/area.less
+++ b/src/less/area.less
@@ -5,17 +5,17 @@
     text-align: center;
     height: 40px;
     line-height: 40px;
-    background: #fafafa;
+    background: #fff;
 
     .area-title-back {
         position: absolute;
         top: 0;
         left: 0;
-        padding: 0 10px;
-        width: 57px;
+        padding: 0 10px 0 20px;
+        width: 70px;
         height: 100%;
-        background: url(../images/close.png) no-repeat 10px 12px;
-        background-size: 17px 17px;
+        background: url(../images/arr-left.png) no-repeat 3px 7px;
+        background-size: 27px 28px;
     }
 }
 .area-search {
@@ -42,7 +42,7 @@
 
 .area-content {
     background: #f0efed;
-    padding: 92px 0 10px 15px;
+    padding: 50px 0 10px 15px;
     .area-item {
         float: left;
         background-color: #fafafa;
