--- a/src/templates/area.html
+++ b/src/templates/area.html
@@ -1,9 +1,10 @@
 <div class="area-title">
     <div ng-click="pageBack()" class="area-title-back">
+        返回
     </div>
     按国家地区筛选
 </div>
-<div class="area-search">
+<div ng-hide="true" class="area-search">
     <input type="text" ng-model="vm.searchText" placeholder="输入城市名或拼音">
 </div>
 <div class="scrollable">
