--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -13,7 +13,7 @@
       ui-show="dropdown1" 
       ui-state="dropdown1"
       ui-turn-off="dropdown1">
-      <li><a href="#/list?type=0">麦啡商城</a></li>
+      <li><a href="#/">麦啡商城</a></li>
       <li><a href="#/list2?type=1">生  豆</a></li>
       <li><a href="#/list3?type=2">coffeefans</a></li>
     </ul>
