--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="detail-item detail-item-comment">
-            订单评论<i class="fa fa-angle-right"></i>
+            会员信息<i class="fa fa-angle-right"></i>
         </div>
 
         <div class="detail-item-group">
@@ -33,7 +33,7 @@
                 我的购物记录<i class="fa fa-angle-right"></i>
             </div>
             <div class="detail-item detail-item-points">
-                本店积分{{vm.userinfo.point}}<i class="fa fa-angle-right"></i>
+                本店积分:&nbps;{{vm.userinfo.point}}<i class="fa fa-angle-right"></i>
             </div>
             <div class="detail-item detail-item-collect">
                 我的收藏<i class="fa fa-angle-right"></i>
