--- a/src/less/member_ship.less
+++ b/src/less/member_ship.less
@@ -89,3 +89,10 @@
         }
     }
 }
+.member-info-content {
+    .detail-item-group {
+        .detail-item {
+            padding-left: 0;
+        }
+    }
+}
