--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -27,6 +27,7 @@
         </div>
         <div class="detail-items">
             <div ng-hide="true" class="detail-item"><label>净含量：</label><span>227g</span></div>
+            <div class="detail-item"><label>等级：</label><span>{{vm.productInfo.attributeValue1}}</span>   <label>地域：</label><span>{{vm.productInfo.attributeValue0}}</span></div>
             <div class="detail-item"><label>剩余：</label><span>{{vm.productInfo.stock}}</span></div>
             <div ng-hide="true" class="detail-item"><label>运费：</label><span>¥6.00~35.00</span></div>
         </div>
